Closed Bug 91149 Opened 24 years ago Closed 24 years ago

Alignment not functioning properly with Applet element

Categories

(Core :: Layout, defect, P2)

defect

Tracking

()

VERIFIED FIXED
mozilla0.9.3

People

(Reporter: chrispetersen, Assigned: waterson)

References

()

Details

(Keywords: regression, Whiteboard: pdt+)

Attachments

(1 file)

Build: 2001071703 Platform: All Expected Results: Applet should be aligned to the right edge of window. What I got: Applet is aligned on the left side of page. Steps to reproduce: 1) Open http://slip/projects/marvin/html/applet_align_right.html 2) Applet renders on left side of page instead of right. 3) Other failures with align and applet: http://slip/projects/marvin/html/applet_align_middle.html http://slip/projects/marvin/html/applet_align_top.html
Keywords: regression
Severity: normal → major
It may be too late to address this for branch092. Is there any workaround which can be documented? cc: chofmann. Chris - do you know if many pages/applets will use this element?
my guess is that usage of the alignment tag might be a pretty basic piece of functionallity and would have pretty widespread use. posting the simple test case for those not behind the nscp firewall. <applet CODE="parbanner.class" CODEBASE="images" HEIGHT="60" WIDTH="300" align="right"> <param NAME="message" VALUE="Scrolling banner text !!!"> </applet> I'd say we need to know more about this one before we ship...
Whiteboard: pdt+
I believe this is common attribute with applet since it has been supported since HTML 3.2. There are a lot of pages that use HTML 3.2 DTD out on the web still. I would like for us to fix it since it passed with NS 6.0 and NS 6.1.
Oops , I mean NS 6.0.1
Checking QA here at Sun; this issue seems familiar, but I can't find any OJI bugs having to do with the ALIGN parameter. Copying previous QA for OJI at Sun and Ed Burns on this. I don't have good data on how common a case this is, which unfortunately is what I think you're *actually* looking for.
We just need to MapAlignAttributesInto().
Assignee: karnaze → waterson
Status: NEW → ASSIGNED
Keywords: patch
Priority: -- → P2
Target Milestone: --- → mozilla0.9.3
dbaron, attinasi, what do you think?
Last time I executed these tests ,which passed, were with the following builds: Mac 2001-06-07-04-0.9.1 Windows: 2001-06-07-13-0.9.1 Linux: 2001-06-07-13-0.9.1
r=karnaze
hyatt, was there a reason you removed this?
No, this was done by mistake. Full steam ahead.
it would be a very good thing if this patch could be landed before the 7/18 branch morning builds. good work folks!
fix checked in, branch and trunk.
Status: ASSIGNED → RESOLVED
Closed: 24 years ago
Resolution: --- → FIXED
Marking verified fixed on the July 18th branch (Mac and Windows) and July 19th Linux branch build.
Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: