Bug 91149. Be sure to call |MapAlignAttributesInto()| to make us notice the |align| attribute. r=karnaze, sr=attinasi.